# drop_ai

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/orchestrator/: package.json  tsconfig.json
apps/web/: index.html  package.json
infra/: docker-compose.yml
plugins/node-browser-harness/: harness_node.py  package.json
plugins/node-browser-use/: browser_use_node.py  package.json  requirements.txt
plugins/node-echo/: echo_node.py  package.json
plugins/node-knowledge-graph/: kg_node.py  package.json  requirements.txt
plugins/node-llm/: package.json  runtime.js
plugins/node-llm-agent/: package.json  runtime.js
plugins/node-llm-agent-claude/: package.json  runtime.js
plugins/node-llm-claude/: package.json  runtime.js
plugins/node-llm-qwen/: package.json  runtime.js
plugins/node-maestro/: maestro_node.py  package.json
plugins/node-text-template/: package.json  runtime.js
plugins/tool-agent-bank/: package.json  runtime.js
plugins/tool-agentic-mail/: package.json  runtime.js
plugins/tool-ai-news/: package.json  runtime.js
plugins/tool-ai-scientist/: package.json  runtime.js
plugins/tool-calculator/: package.json  runtime.js
plugins/tool-clinagent/: package.json  runtime.js
plugins/tool-contract-guard/: package.json  runtime.js
plugins/tool-earth-link/: package.json  runtime.js
plugins/tool-fetch/: package.json  runtime.js
scripts/: setup-plugin-venvs.sh
workers/python-runner/: pyproject.toml
workers/python-runner/dropai_python_runner/: __main__.py
(+62 files in other folders)
