[project]
name = "dropai-python-runner"
version = "0.0.1"
description = "DropAI subprocess bridge between the Node orchestrator and Python plugins."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dropai_python_runner"]
